fixed product page spacing between category sections

--- a/logical-solutions/styles/4-sections/product.sass
+++ b/logical-solutions/styles/4-sections/product.sass
@@ -2,6 +2,10 @@
   display: flex
   flex-wrap: wrap
   justify-content: flex-start
+  margin-bottom: 8rem
+
+  @media screen and (max-width: 767px)
+    margin-bottom: 3rem
 
   &--contact-btn-container
     position: relative
